Tehtävät/Project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: project-image
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project
          image: jovankarmakka/project:v0.11
          imagePullPolicy: Always
          volumeMounts:
          - name: project-image
            mountPath: /usr/src/app/files
