Tehtävät/Project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
