Tehtävät/Project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: ingress
spec:
  rules:
  - http:
      paths:     
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 2347
      - path: /project
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 2347
      - path: /gettodos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2348
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2348
